--- a/scss/_img-hover.scss
+++ b/scss/_img-hover.scss
@@ -1,36 +1,39 @@
-// .item-img img {
-//     /* IE5+ */
-//     -webkit-filter: grayscale(100%);
-//     /* Safari 6.0 - 9.0 */
-//     filter: grayscale(100%);
-//     ;
-//     -webkit-filter: grayscale(100%);
-//     -moz-filter: grayscale(100%);
-//     -o-filter: grayscale(100%);
-//     -ms-filter: grayscale(100%);
-//     /* Webkit Nightlies & Chrome Canary */
-//     transition: all .9s ease-in-out;
-//     -webkit-transition: all .9s ease-in-out;
-//     &:hover {
-//         // filter: grayscale(0);
-//         // -webkit-filter: grayscale(0);
-//         // // -webkit-transform: scale(1.01);
-//         -webkit-filter: none!important;
-//         // -webkit-transform: scale(1.01);
-//         filter: none!important;
-//         -webkit-filter: none!important;
-//         -moz-filter: none!important;
-//         -o-filter: none!important;
-//         -ms-filter: none!important;
-//     }
-// }
-// .addColor {
-//     -webkit-filter: none!important;
-//     // -webkit-transform: scale(1.01);
-//     filter: none!important;
-//     ;
-//     -webkit-filter: none!important;
-//     -moz-filter: none!important;
-//     -o-filter: none!important;
-//     -ms-filter: none!important;
-// }
+.item-img img {
+    /* IE5+ */
+    -webkit-filter: grayscale(100%);
+    /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
+    ;
+    -webkit-filter: grayscale(100%);
+    -moz-filter: grayscale(100%);
+    -o-filter: grayscale(100%);
+    -ms-filter: grayscale(100%);
+    /* Webkit Nightlies & Chrome Canary */
+    transition: all .9s ease-in-out;
+    -webkit-transition: all .9s ease-in-out;
+    backface-visibility: hidden;
+    -webkit-transform-style: preserve-3d;
+    &:hover {
+        // filter: grayscale(0);
+        // -webkit-filter: grayscale(0);
+        // // -webkit-transform: scale(1.01);
+        -webkit-filter: none!important;
+        // -webkit-transform: scale(1.01);
+        filter: none!important;
+        -webkit-filter: none!important;
+        -moz-filter: none!important;
+        -o-filter: none!important;
+        -ms-filter: none!important;
+    }
+}
+
+.addColor {
+    -webkit-filter: none!important;
+    // -webkit-transform: scale(1.01);
+    filter: none!important;
+    ;
+    -webkit-filter: none!important;
+    -moz-filter: none!important;
+    -o-filter: none!important;
+    -ms-filter: none!important;
+}
